fleet/config/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: be-deny-all
  annotations:
    configmanagement.gke.io/namespace-selector: backend-scope
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector:
    matchLabels: null
